my account page responsive spacing fixed

--- a/assets/css/my-account-layout.scss
+++ b/assets/css/my-account-layout.scss
@@ -1886,14 +1886,8 @@
 				padding: $spacing_24px $spacing_24px 52px 36px;
 
 				@media screen and (max-width: 600px) {
-					padding: 28px 24px 20px;
+					padding: 28px 12px 20px;
 				}
-
-				// &__header {
-				// 	display: flex;
-				// 	justify-content: space-between;
-				// 	align-items: center;
-				// }
 			}
 		}
 	}
@@ -1935,7 +1929,7 @@
 				padding: $spacing_24px 36px 52px 36px;
 
 				@media screen and (max-width: 600px) {
-					padding: 28px 24px 20px;
+					padding: 28px 12px 20px;
 				}
 			}
 		}
